--- a/portfolio/css/style-1.css
+++ b/portfolio/css/style-1.css
@@ -43,7 +43,7 @@ h4 {
 }
 
 h1 {
-  color: var(--heading);
+  color: rgb(168 127 66);
   font-size: 6rem;
   font-weight: 600;
 }
@@ -73,7 +73,7 @@ li {
             header section start
  ==================================== */
 .header {
-  padding: 0 4.8rem;
+  padding: 6rem 4.8rem;
   height: 10rem;
   background-color: var(--bg-color);
   display: flex;
@@ -82,7 +82,8 @@ li {
 }
 
 .header .logo {
-  height: 3rem;
+  height: 12rem;
+  width: 20rem;
 }
 
 .navbar .navbar-lists {
